tests/baselines/reference/noImplicitAnyStringIndexerOnObject.errors.txt
tests/cases/compiler/noImplicitAnyStringIndexerOnObject.ts(2,9): error TS7018: Index signature of object type implicitly has an 'any' type.


==== tests/cases/compiler/noImplicitAnyStringIndexerOnObject.ts (1 errors) ====
    
    var x = {}["hello"];
            ~~~~~~~~~~~
!!! error TS7018: Index signature of object type implicitly has an 'any' type.